# aftertone

./: AGENTS.md  CONTRIBUTING.md  README.md
.claude/rules/: spoken-summary.md
.cursor/commands/: aftertone-doctor.md  aftertone-expression.md  aftertone-lang.md  aftertone-mode.md  aftertone-off.md  aftertone-on.md  aftertone-repair.md  aftertone-restart.md  aftertone-speed.md  aftertone-status.md  aftertone-toggle.md  aftertone-voice.md
.cursor/hooks/: README.md  hook_payload_trace.sh  resolve_aftertone_repo.sh  speak_summary.sh  speak_summary.toml
.github/: STARTER_ISSUES.md
claude-plugin/: README.md
docs/: README-video-embed.md  README.md  docs.html  index.html  styles.css
py/: README.md  aftertone_paths.py  helper.py  install_global_claude_hooks.py  install_global_hooks.py  pyproject.toml  speak_summary_config.py  speak_summary_prepare.py  speak_summary_toggle.py  sync_spoken_rule_lang.py  test_speak_summary_pipeline.sh  tts_daemon.py  tts_daemon_ctl.py  uninstall_global_hooks.py
py/aftertone/: README.md  cli.py  config.py  defaults.py  extract.py  hook_run.py  pipeline_trace.py  prepare.py  sessions.py  summary.py  text_utils.py  timing.py
py/tests/: test_aftertone_paths.py  test_aftertone_v2.py  test_install_global_hooks.py  test_pipeline_trace.py  test_speak_summary_prepare.py  test_speak_summary_prepare_unit.py  test_timing.py
scripts/: README.md  aftertone-root.sh  aftertone_on  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  publish_readme_demo_video.sh  repair-windows-hooks.ps1  uninstall.ps1  uninstall.sh  verify_uninstall_windows.ps1
(+37 files in other folders)
