[project]
name = "aftertone"
version = "0.1.0"
description = "Local Supertonic TTS after agent replies — Cursor hooks today; Claude & Codex adapters welcome."
requires-python = ">=3.10"
dependencies = [
    "onnxruntime==1.23.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.5.1",
    "librosa>=0.10.0",
    "PyYAML>=6.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
